--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Coding Standard WOD</title>
+        <title>Hello Love</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
-        <script src="codingStandardWOD.js"></script>
+        <script src="helloLove.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
